Fix HTML entity encoding in index.html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <span class="instruction-text">THRUST VECTORING</span>
                         </div>
                         <div class="instruction-row">
-                            <span class="mouse-icon">󰍽</span>
+                            <span class="mouse-icon">RIGHT MOUSE BUTTON</span>
                             <span class="instruction-text">AIM & FIRE</span>
                         </div>
                         <div class="instruction-row">
@@ -133,5 +133,6 @@
 
     <script type="module" src="js/main.js"></script>
 </body>
+
 
 </html>
