--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
                             <span class="instruction-text">THRUST VECTORING</span>
                         </div>
                         <div class="instruction-row">
+                            <span class="key-icon">
                             <span class="mouse-icon">RIGHT MOUSE BUTTON</span>
                             <span class="instruction-text">AIM & FIRE</span>
+                            </span>
                         </div>
                         <div class="instruction-row">
                             <span class="key-icon wide">SHIFT</span>
@@ -136,3 +138,4 @@
 
 
 </html>
+
